# Dinger-Stats-Discord-Bot

./: keepBotAlive.py  main.py  playerStatsQueryFunction.py  pyproject.toml  teamStatsQueryFunction.py
results/: seasonal_player_stats-mlb-2021-2022-regular.json  seasonal_player_stats-mlb-2021-regular.json  seasonal_player_stats-mlb-2022-regular.json  seasonal_player_stats-mlb-latest.json  seasonal_team_stats-mlb-latest.json
